@@ -1,5 +1,11 @@
 2005-12-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Dialog_Disklabel.h,
+	  src/Dialog_Disklabel.cc: replaced deprecated Gtk::Optionmenu with
+	  Gtk::ComboBoxText
+	
+2005-12-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: don't wait for node to appear when an extended
 	  partition is created.
 	
